--- a/network-sdk-sample/app/src/main/res/layout/fragment_configuration.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_configuration.xml
@@ -23,6 +23,15 @@
             android:background="@color/configuration_card"
             android:padding="24dp">
 
+            <androidx.core.widget.ContentLoadingProgressBar
+                android:id="@+id/loadingProgressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
+
             <TextView
                 android:id="@+id/welcome_message"
                 android:layout_width="0dp"
@@ -108,5 +117,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
