--- a/network-sdk-sample/app/src/main/res/layout/fragment_trip_booking.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_trip_booking.xml
@@ -172,4 +172,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/payment_card" />
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/loadingProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_marginTop="@dimen/card_spacing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/payment_card"
+        app:layout_constraintRight_toRightOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
