--- a/network-sdk-sample/app/src/main/res/layout/fragment_trip_planning.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_trip_planning.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/card_spacing"
     android:background="@color/planning_background"
+    android:padding="@dimen/card_spacing"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
@@ -84,8 +84,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@color/planning_button"
-                android:textColor="@color/colorWhite"
                 android:text="@string/submit"
+                android:textColor="@color/colorWhite"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/origin_text" />
@@ -96,8 +96,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@color/planning_button"
-                android:textColor="@color/colorWhite"
                 android:text="@string/submit"
+                android:textColor="@color/colorWhite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -147,4 +147,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/loadingProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="@dimen/card_spacing"
+        android:layout_marginEnd="0dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/trip_card" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
