--- a/network-sdk-sample/app/src/main/res/layout/fragment_trip_quotes.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_trip_quotes.xml
@@ -22,6 +22,15 @@
             android:background="@color/quotes_card"
             android:padding="16dp">
 
+            <androidx.core.widget.ContentLoadingProgressBar
+                android:id="@+id/loadingProgressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
+
             <TextView
                 android:id="@+id/header_label"
                 android:layout_width="match_parent"
