--- a/network-sdk-sample/app/src/main/res/layout/fragment_trip_tracking.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_trip_tracking.xml
@@ -196,6 +196,16 @@
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/loadingProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/card_spacing"
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@id/trip_card"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/track"
         android:layout_width="wrap_content"
