Remove Staging config and use Sandbox

--- a/network-sdk-sample/app/src/main/res/values/colors.xml
+++ b/network-sdk-sample/app/src/main/res/values/colors.xml
@@ -11,15 +11,15 @@
     <color name="tracking_card">#C8E6FF</color>
     <color name="tracking_button">#0F4E77</color>
     <color name="booking_background">#079992</color>
-    <color name="booking_card">#BEFFFA</color>
+    <color name="booking_card">#D2FFFC</color>
     <color name="booking_button">#02635E</color>
     <color name="planning_background">#0984e3</color>
-    <color name="planning_card">#BED2FF</color>
+    <color name="planning_card">#D7E6FF</color>
     <color name="planning_button">#024A81</color>
-    <color name="quotes_background">#3c6382</color>
-    <color name="quotes_card">#B4F0FF</color>
+    <color name="quotes_background">#64AAC8</color>
+    <color name="quotes_card">#D2F0FF</color>
     <color name="quotes_button">#0a3d62</color>
-    <color name="configuration_background">#7D68E4</color>
-    <color name="configuration_card">#DCD2FF</color>
+    <color name="configuration_background">#8C7DFF</color>
+    <color name="configuration_card">#E6E6FF</color>
     <color name="configuration_button">#4834d4</color>
 </resources>
