--- a/network-sdk-sample/app/src/main/res/layout/fragment_trip_tracking.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_trip_tracking.xml
@@ -11,7 +11,7 @@
         android:layout_height="0dp"
         android:background="@color/tracking_background"
         android:padding="@dimen/card_spacing"
-        tools:context=".booking.TripBookingFragment">
+        tools:context=".booking.BraintreeTripBookingFragment">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/address_card"
