--- a/network-sdk-sample/app/src/main/res/layout/fragment_configuration.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_configuration.xml
@@ -85,6 +85,7 @@
                     android:hint="@string/username"
                     android:inputType="none"
                     android:singleLine="true"
+                    android:text="braintreetest1@karhoo.com"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/welcome_message" />
