--- a/network-sdk-sample/app/src/main/res/layout/fragment_configuration.xml
+++ b/network-sdk-sample/app/src/main/res/layout/fragment_configuration.xml
@@ -135,7 +135,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/non_karhoo_user_card"
-            android:layout_width="409dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/card_spacing"
             app:layout_constraintEnd_toEndOf="parent"
