MOB-3129 UI SDK customisation sample app

--- a/ui-sdk-components-sample/app/src/main/res/layout/activity_main.xml
+++ b/ui-sdk-components-sample/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#82ccdd"
+        android:background="@color/colorAccent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- activity_screen_slide.xml -->
