--- a/ui-sdk-components-sample/app/src/main/res/layout/fragment_configuration.xml
+++ b/ui-sdk-components-sample/app/src/main/res/layout/fragment_configuration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/violet"
+    android:background="@color/colorAccent"
     android:padding="@dimen/card_spacing"
     tools:context="com.karhoo.samples.uisdk.components.MainActivity">
 
