--- a/ui-sdk-components-sample/app/src/main/res/layout/fragment_trip_quotes.xml
+++ b/ui-sdk-components-sample/app/src/main/res/layout/fragment_trip_quotes.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorAccent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sky_blue"
     android:padding="@dimen/padding_default"
     tools:context="com.karhoo.samples.uisdk.components.quotes.TripQuotesFragment">
 
@@ -12,8 +12,8 @@
         android:id="@+id/quotes_list_widget"
         android:layout_width="0dp"
         android:layout_height="@dimen/collapsible_pane_expanded_height"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
