--- a/ui-sdk-components-sample/app/src/main/res/layout/fragment_trip_tracking.xml
+++ b/ui-sdk-components-sample/app/src/main/res/layout/fragment_trip_tracking.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorAccent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/medium_blue"
     android:padding="@dimen/padding_default"
     tools:context="com.karhoo.samples.uisdk.components.booking.TripBookingFragment">
 
@@ -181,10 +181,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/card_spacing"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/trip_layout"
-        app:layout_constraintTop_toTopOf="@id/trip_layout"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/trip_layout" />
 
     <Button
         android:id="@+id/track"
@@ -195,8 +195,8 @@
         android:text="@string/track"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/trip_layout" />
 
     <Button
@@ -207,8 +207,8 @@
         android:background="@color/dark_blue"
         android:text="@string/stop"
         android:textColor="@color/colorWhite"
-        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toEndOf="@id/track"
         app:layout_constraintTop_toBottomOf="@id/trip_layout" />
 
