--- a/ui-sdk-components-sample/app/src/theme3/res/values/colors.xml
+++ b/ui-sdk-components-sample/app/src/theme3/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f3a683</color>
-    <color name="colorPrimaryDark">#f19066</color>
-    <color name="colorAccent">#786fa6</color>
-    <color name="secondary">#574b90</color>
-    <color name="primary_green">#00CC66</color>
+    <color name="colorPrimary">#487eb0</color>
+    <color name="colorPrimaryDark">#40739e</color>
+    <color name="colorAccent">#353b48</color>
+    <color name="secondary">#2f3640</color>
     <color name="primary">@color/colorPrimary</color>
-
+    <color name="primary_green">#00CC66</color>
     <color name="dark_grey">#666666</color>
     <color name="medium_blue">#2980b9</color>
     <color name="dark_blue">#0F4E77</color>
