--- a/ui-sdk-dropin-sample/app/src/amazon/res/values/colors.xml
+++ b/ui-sdk-dropin-sample/app/src/amazon/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="primary">#232f3e</color>
     <color name="secondary">#ff9900</color>
     <color name="accent">#00464f</color>
+    <color name="map_curve_line">#009688</color>
 </resources>
