--- a/ui-sdk-dropin-sample/app/src/farechoice/res/values/colors.xml
+++ b/ui-sdk-dropin-sample/app/src/farechoice/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="primary">#00203F</color>
     <color name="secondary">#00BFA5</color>
     <color name="accent">#3492D5</color>
+    <color name="map_curve_line">@color/primary</color>
 </resources>
