--- a/ui-sdk-dropin-sample/app/src/ikea/res/values/colors.xml
+++ b/ui-sdk-dropin-sample/app/src/ikea/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="primary">#FFCC00</color>
     <color name="secondary">#003399</color>
     <color name="accent">#000000</color>
+    <color name="map_curve_line">#2196F3</color>
 </resources>
