--- a/ui-sdk-dropin-sample/app/src/instagram/res/values/colors.xml
+++ b/ui-sdk-dropin-sample/app/src/instagram/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="primary">#515BD4</color>
     <color name="secondary">#8134AF</color>
     <color name="accent">#DD2A7B</color>
+    <color name="map_curve_line">#E91E63</color>
 </resources>
