--- a/ui-sdk-dropin-sample/app/src/main/res/values/themes.xml
+++ b/ui-sdk-dropin-sample/app/src/main/res/values/themes.xml
@@ -16,11 +16,18 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AppTheme.Toolbar">
+        <item name="colorControlNormal">@color/off_white</item>
+        <item name="android:textColorSecondary">@color/off_white</item>
+        <item name="actionMenuTextColor">@color/off_black</item>
+        <item name="android:textColorPrimary">@color/off_white</item>
+        <item name="android:background">@color/toolbar_background</item>
+    </style>
 
     <style name="KhBookingMapViewStyle">
         <item name="mapPickupPin">@drawable/ic_pickup_pin</item>
         <item name="mapDropOffPin">@drawable/uisdk_ic_dropoff_pin</item>
-        <item name="curvedLineColor">@color/primary</item>
+        <item name="curvedLineColor">@color/map_curve_line</item>
     </style>
 
     <style name="KhAddressMapPickupIcon">
@@ -32,5 +39,23 @@
         <item name="srcCompat">@drawable/uisdk_ic_destination</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="KhVehicleClassTabs" parent="Widget.Design.TabLayout">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="selectedTabTextColor">@color/text_primary</item>
+        <item name="unselectedTabTextColor">@color/text_alternative</item>
+        <item name="unavailableTabTextColor">@color/text_unavailable</item>
+        <item name="tabIndicatorColor">@color/accent</item>
+        <item name="tabIndicatorHeight">3dp</item>
+        <item name="tabTextAppearance">@style/VehicleClassTabTextAppeareance</item>
+        <item name="tabBackground">@drawable/uisdk_category_selector_tab</item>
+        <item name="tabGravity">fill</item>
+        <item name="tabMode">fixed</item>
+        <item name="tabPaddingEnd">-3dp</item>
+        <item name="tabPaddingStart">-3dp</item>
+        <item name="android:layout_marginTop">@dimen/spacing_none</item>
+        <item name="android:layout_marginBottom">@dimen/spacing_none</item>
     </style>
 </resources>
