--- a/ui-sdk-dropin-sample/app/src/mcdolands/res/values/colors.xml
+++ b/ui-sdk-dropin-sample/app/src/mcdolands/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#ffd700</color>
+    <color name="primary">#FF9800</color>
     <color name="secondary">#27742d</color>
-    <color name="accent">#db1020</color>
+    <color name="accent">#FF5722</color>
+    <color name="colorAccent">#FF5722</color>
+    <color name="map_curve_line">#FFEB3B</color>
 </resources>
