--- a/ui-sdk-dropin-sample/app/src/instagram/res/values/colors.xml
+++ b/ui-sdk-dropin-sample/app/src/instagram/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#515BD4</color>
-    <color name="secondary">#8134AF</color>
-    <color name="accent">#DD2A7B</color>
-    <color name="map_curve_line">#E91E63</color>
+    <color name="primary">#3F51B5</color>
+    <color name="secondary">#2D62DD</color>
+    <color name="accent">#0B1C75</color>
+    <color name="map_curve_line">#00BCD4</color>
 </resources>
