--- a/ui-sdk-dropin-sample/app/src/main/res/layout/activity_main.xml
+++ b/ui-sdk-dropin-sample/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome_message"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="120dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,13 +27,44 @@
         />
 
     <Button
-        android:id="@+id/bookTripButtonTokenExchange"
+        android:id="@+id/bookTripButtonGuestWithPassenger"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/bookTripButtonGuest"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/book_a_trip_guest_with_passenger"
+        />
+
+    <Button
+        android:id="@+id/bookTripButtonGuestWithPassengerWithJourney"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/bookTripButtonGuestWithPassenger"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/book_a_trip_guest_with_passenger_journey"
+        />
+
+    <Button
+        android:id="@+id/bookTripButtonTokenExchange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/bookTripButtonGuestWithPassengerWithJourney"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:text="@string/book_a_trip_token_exchange"
+        />
+
+    <Button
+        android:id="@+id/bookTripButtonTokenExchangeWithPassenger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/bookTripButtonTokenExchange"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/book_a_trip_token_exchange_with_passenger"
         />
 
     <ProgressBar
@@ -42,7 +73,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@id/bookTripButtonTokenExchange"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/bookTripButtonTokenExchangeWithPassenger"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
