--- a/ui-sdk-dropin-sample/app/src/main/res/values/colors.xml
+++ b/ui-sdk-dropin-sample/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="sort_right_selected">@color/accent</color>
 
     <color name="toolbar_background">@color/primary</color>
+    <color name="kh_uisdk_secondary">@color/secondary</color>
 </resources>
