--- a/ui-sdk-dropin-sample/app/src/ikea/res/values/themes.xml
+++ b/ui-sdk-dropin-sample/app/src/ikea/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/secondary</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="colorControlNormal">@color/med_grey</item>
+        <item name="colorControlNormal">@color/kh_uisdk_med_grey</item>
         <item name="colorControlActivated">@color/primary</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
