--- a/ui-sdk-dropin-sample/app/src/main/res/values/themes.xml
+++ b/ui-sdk-dropin-sample/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/primary</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/secondary</item>
         <!-- Customize your theme here. -->
     </style>
 
